Add vibe-coded working streaming

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,13 +1,26 @@
-FROM elixir:1.18-alpine
+FROM elixir:1.19-alpine
+
+# Install system dependencies
+RUN apk add --no-cache \
+    postgresql-client \
+    ffmpeg \
+    inotify-tools \
+    build-base
 
 WORKDIR /app
 
+# Install hex and rebar
 RUN mix local.hex --force && \
     mix local.rebar --force
 
+# Copy mix files and get dependencies
 COPY mix.exs mix.lock ./
 RUN mix deps.get
 
+# Copy source (will be overridden by volume mounts in dev)
 COPY . .
+
+# Compile everything (dependencies will be cached)
+RUN mix compile
 
 CMD ["mix", "run", "--no-halt"]
