--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,47 @@
 services:
-  elixir_radio:
+  postgres:
+    image: postgres:17-alpine
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: elixir_radio_dev
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  app:
     build:
       context: .
       dockerfile: Dockerfile.dev
     ports:
       - "4000:4000"
+    environment:
+      MIX_ENV: dev
+      DATABASE_URL: "postgres://postgres:postgres@postgres:5432/elixir_radio_dev"
     volumes:
-      - .:/app
+      # Hot-reload source code
+      - ./lib:/app/lib
+      - ./config:/app/config
+      - ./priv:/app/priv
+      - ./public:/app/public
+      - ./mix.exs:/app/mix.exs
+      # Cache build artifacts and dependencies
+      - build_cache:/app/_build
+      - deps_cache:/app/deps
+      # Data directory for segments (if using filesystem fallback)
       - ./data:/data
-    environment:
-      - MIX_ENV=dev
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     command: mix run --no-halt
-
-  postgres:
-    image: postgres:17
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: elixir_radio
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
 
 volumes:
   postgres_data:
+  build_cache:
+  deps_cache:
