--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,7 @@
-# The audio files
-data/
-
-# The directory Mix will write compiled artifacts to.
-/_build/
-
-# If you run "mix test --cover", coverage assets end up here.
-/cover/
-
-# The directory Mix downloads your dependencies sources to.
-/deps/
-
-# Where third-party dependencies like ExDoc output generated docs.
-/doc/
-
-# If the VM crashes, it generates a dump, let's ignore it too.
+# Backend
+_build
+deps
 erl_crash.dump
-
-# Also ignore archive artifacts (built via "mix archive.build").
 *.ez
-
-# Ignore package tarball (built via "mix hex.build").
-elixir_radio-*.tar
-
-# Temporary files, for example, from tests.
-/tmp/
-
-# Also ignore archive artifacts (built via "mix archive.build")
-*.ez
-
-# Ignore package tarball (built via "mix hex.build")
-elixir_radio-*.tar
-
-# Elixir Language Server
-/.elixir_ls/
+*.tar
+.elixir_ls/
